# Bannerlator

./: .gitignore  .gitmodules  BANNERLATORS_PROGRESS_LOG.md  BIONIC_FG_UPSTREAM_REPORT.md  PROGRESS_LOG.md  README.md  THIRD-PARTY-LICENSES.md
.claude/agents/: ama-agent.md
.github/ISSUE_TEMPLATE/: ask-the-ai.yml
.github/workflows/: ama-answer.yml  build-artifacts-fast.yml  build-artifacts.yml  build-vkbasalt.yml  release.yml
.opencode/agent/: ama-agent.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: wine_startmenu.json
app/src/main/assets/graphics_driver/: wrapper-leegao.tzst
app/src/main/assets/lsfg-vk/: VkLayer_LS_frame_generation.json
app/src/main/cpp/: CMakeLists.txt  vkbasalt-android-arm64.cross
app/src/main/cpp/asurfacerenderer/: ASurfaceRendererContext.cpp  ASurfaceRendererContext.h  ahbimage.c  asurface_jni.cpp  drawable.c
app/src/main/cpp/winlator/: VulkanRendererContext.cpp  VulkanRendererContext.h  VulkanRendererScanout.cpp  cas.frag  cas_frag.h  hdr.frag  hdr_frag.h  sgsr.frag  sgsr_frag.h  vulkan_jni.cpp
app/src/main/java/com/winlator/star/: ControlsEditorActivity.java  ExternalControllerBindingsActivity.java  FilePickerActivity.kt  MainActivity.kt  XServerDisplayActivity.java
app/src/main/java/com/winlator/star/communityconfigs/: AccountManager.kt  CanonicalGame.kt  CommunityConfigApply.kt  CommunityConfigFetcher.kt  CommunityConfigRef.kt  CommunityConfigRepository.kt  CommunityConfigWorker.kt  ConfigExporter.kt  ConfigMeta.kt  DeviceIdentity.kt  GameMatcher.kt  InstalledComponents.kt  ShortcutConfig.kt  ShortcutExporter.kt  UploadedConfigsStore.kt
app/src/main/java/com/winlator/star/components/: ComponentCatalog.kt  ComponentInstaller.kt
app/src/main/java/com/winlator/star/container/: Container.java
app/src/main/java/com/winlator/star/contentdialog/: DXVKConfigDialog.java
app/src/main/java/com/winlator/star/contents/: ContentsManager.java
app/src/main/java/com/winlator/star/core/: FileUtils.java  GameSaveBackup.kt  HttpUtils.java  LogLocation.java  PeIconExtractor.kt  SaveLocator.kt  UpdateManager.kt  WineThemeManager.java
app/src/main/java/com/winlator/star/fexcore/: FEXCorePreset.java  FEXCorePresetManager.java
app/src/main/java/com/winlator/star/inputcontrols/: ControlElement.java
app/src/main/java/com/winlator/star/renderer/: AHBImage.java  ASurfaceRenderer.java  EffectComposer.java  GLRenderer.java  GPUImage.java  NativeTexture.java  ViewTransformation.java
app/src/main/java/com/winlator/star/reshade/: ReshadeLoadout.java  ReshadeManager.java
app/src/main/java/com/winlator/star/store/: AmazonGameDetailActivity.kt  AmazonGamesActivity.kt  AmazonInstallState.kt  AmazonLibrarySync.kt  AmazonLoginActivity.kt  AmazonMainActivity.kt  DepotSizeResolver.kt  DownloadManagerActivity.kt  DownloadSpeedConfig.kt  EpicAuthClient.java  EpicFreeGamesActivity.kt  EpicGameDetailActivity.kt  EpicGamesActivity.kt  EpicInstallState.kt  EpicLibrarySync.kt  EpicLoginActivity.kt  EpicMainActivity.kt  FolderPickerActivity.java  GogGameDetailActivity.kt  GogGamesActivity.kt  GogInstallState.kt  GogLoginActivity.kt  GoldbergComponent.kt  GoldbergPatcher.kt  QrLoginActivity.kt  StarLaunchBridge.java  SteamDatabase.java  SteamDepotDownloader.kt  SteamForegroundService.kt  SteamGameDetailActivity.kt  SteamGamesActivity.kt  SteamLogRedactor.java  SteamLoginActivity.kt  SteamPrefs.kt  SteamRepository.java  SteamStatusPill.kt
app/src/main/java/com/winlator/star/ui/: AccountAvatar.kt  AppDrawer.kt  AppNavGraph.kt  (+7 more)
app/src/main/res/layout/: binding_field.xml  binding_spinner_dropdown_item.xml  binding_spinner_item.xml  external_controller_binding_list_item.xml
app/src/main/res/values/: arrays.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml  network_security_config.xml
docs/: GL_DIRECT_SCANOUT_PLAN.md  THEME_AND_DRAWER_REBUILD_PLAN.md  bannerhub_config_system_reference.md  community-configs-guide.md  community_config_detail_page.md  render_upgrades_report.html  shortcut_card_L_final.html  shortcut_card_layouts_dense.html  spec_per_game_save_backup.md
patches/: bionic-fg-bannerlator-fixes.patch  vkbasalt-reshade-livereload.patch
(+42 files in other folders)
